--- a/src/App.css
+++ b/src/App.css
@@ -63,10 +63,10 @@
   .FormWrap {
     background-color: #4A5E99;
     border-radius: 25px;
-    padding-top: 125px;
+    padding-top: 95px;
     padding-bottom: 125px;
     margin: 0 auto;
-    margin-top: 105px;
+    margin-top: 85px;
     width: 650px;
   }
 
@@ -101,6 +101,7 @@
 
   .FormWrap button :hover{ 
     background-color: #4A5E99;
+    border: 0.5px;
   }
 
   .Logo{
@@ -112,22 +113,30 @@
 
 .CanvasWrapper{
   background-color:  #F8F8FF;
-    border: 1px solid #FF8240; 
-    border-radius: 8px;
-    padding: 35px;
+    border-radius: 5px;
     margin: 0 auto; 
+    margin-top: 50px;
     margin-bottom: 50px; 
-    max-width: 650px;
+    max-width: 450px;
 }
 
 .CanvasWrapper:hover{
-    border: 2px solid #FF8240; 
+    border: 1px solid #4A5E99; 
 }
 
 .Images{
-  padding: 15px;
   display: flex; 
-  justify-content: center;
-  margin: 0 auto; 
+  justify-content: center; 
+  padding-top: 20px;
 }
 
+.PostText{
+  margin: 20px; 
+  padding-bottom: 5px; 
+}
+
+.postIcon{
+  font-size: 34px;
+  margin: 10px; 
+  padding-top: 10px;
+}
